@@ -1,4 +1,8 @@
-﻿w17 24.03.2016 20:32:59 +0300 - build 4597
+﻿drkns 24.03.2016 23:04:54 +0200 - build 4598
+
+1. Спрашиваем имя & пароль при cd \\server\share
+
+w17 24.03.2016 20:32:59 +0300 - build 4597
 
 1. Уточнение 4596. Вернём переключение когда Info панель неактивна.
 
